cbits/Bullet.h

int btBvhTree_getNodeData(void *c,int p0); //method: getNodeData int ( ::btBvhTree::* )( int ) const
void btBvhTree_getNodeBound(void *c,int p0,void* p1); //method: getNodeBound void ( ::btBvhTree::* )( int,::btAABB & ) const
int btBvhTree_getRightNode(void *c,int p0); //method: getRightNode int ( ::btBvhTree::* )( int ) const
int btBvhTree__calc_splitting_axis(void *c,void* p0,int p1,int p2); //method: _calc_splitting_axis int ( ::btBvhTree::* )( ::GIM_BVH_DATA_ARRAY &,int,int ) 
void btBvhTree_m_num_nodes_set(void *c,int a); //attribute: int btBvhTree->m_num_nodes
int btBvhTree_m_num_nodes_get(void *c); //attribute: int btBvhTree->m_num_nodes
void btBvhTree_m_node_array_set(void *c,void* a); //attribute: ::GIM_BVH_TREE_NODE_ARRAY btBvhTree->m_node_array
void* btBvhTree_m_node_array_get(void *c); //attribute: ::GIM_BVH_TREE_NODE_ARRAY btBvhTree->m_node_array
void* btGImpactBvh_new0(); //constructor: btGImpactBvh  ( ::btGImpactBvh::* )(  ) 
void* btGImpactBvh_new1(void* p0); //constructor: btGImpactBvh  ( ::btGImpactBvh::* )( ::btPrimitiveManagerBase * ) 
void btGImpactBvh_free(void *c);
 
void btGImpactBvh_setNodeBound(void *c,int p0,void* p1); //method: setNodeBound void ( ::btGImpactBvh::* )( int,::btAABB const & ) 
int btGImpactBvh_getEscapeNodeIndex(void *c,int p0); //method: getEscapeNodeIndex int ( ::btGImpactBvh::* )( int ) const
int btGImpactBvh_isLeafNode(void *c,int p0); //method: isLeafNode bool ( ::btGImpactBvh::* )( int ) const
void* btGImpactBvh_getPrimitiveManager(void *c); //method: getPrimitiveManager ::btPrimitiveManagerBase * ( ::btGImpactBvh::* )(  ) const
void btGImpactBvh_getNodeBound(void *c,int p0,void* p1); //method: getNodeBound void ( ::btGImpactBvh::* )( int,::btAABB & ) const
int btGImpactBvh_getRightNode(void *c,int p0); //method: getRightNode int ( ::btGImpactBvh::* )( int ) const
int btGImpactBvh_getLeftNode(void *c,int p0); //method: getLeftNode int ( ::btGImpactBvh::* )( int ) const
void btGImpactBvh_setPrimitiveManager(void *c,void* p0); //method: setPrimitiveManager void ( ::btGImpactBvh::* )( ::btPrimitiveManagerBase * ) 
void btGImpactBvh_buildSet(void *c); //method: buildSet void ( ::btGImpactBvh::* )(  ) 
void btGImpactBvh_getNodeTriangle(void *c,int p0,void* p1); //method: getNodeTriangle void ( ::btGImpactBvh::* )( int,::btPrimitiveTriangle & ) const
int btGImpactBvh_getNodeCount(void *c); //method: getNodeCount int ( ::btGImpactBvh::* )(  ) const
int btGImpactBvh_hasHierarchy(void *c); //method: hasHierarchy bool ( ::btGImpactBvh::* )(  ) const
int btGImpactBvh_rayQuery(void *c,float* p0,float* p1,void* p2); //method: rayQuery bool ( ::btGImpactBvh::* )( ::btVector3 const &,::btVector3 const &,::btAlignedObjectArray<int> & ) const
void btGImpactBvh_update(void *c); //method: update void ( ::btGImpactBvh::* )(  ) 
void btGImpactBvh_refit(void *c); //method: refit void ( ::btGImpactBvh::* )(  ) 
int btGImpactBvh_isTrimesh(void *c); //method: isTrimesh bool ( ::btGImpactBvh::* )(  ) const
int btGImpactBvh_boxQuery(void *c,void* p0,void* p1); //method: boxQuery bool ( ::btGImpactBvh::* )( ::btAABB const &,::btAlignedObjectArray<int> & ) const
void btGImpactBvh_find_collision(void* p0,float* p1,void* p2,float* p3,void* p4); //method: find_collision void (*)( ::btGImpactBvh *,::btTransform const &,::btGImpactBvh *,::btTransform const &,::btPairSet & )