Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{#fun btBvhTree_getNodeData as btBvhTree_getNodeData    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#189>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_getNodeBound as btBvhTree_getNodeBound    `( BtBvhTreeClass bc , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
, withBt* `p1'  -- ^ bound
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#204>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_getRightNode as btBvhTree_getRightNode    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#153>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree__calc_splitting_axis as btBvhTree__calc_splitting_axis    `( BtBvhTreeClass bc , GIM_BVH_DATA_ARRAYClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ primitive_boxes
,  `Int'  -- ^ startIndex
,  `Int'  -- ^ endIndex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#146>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_m_num_nodes_set    `( BtBvhTreeClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#146>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_m_num_nodes_get    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#147>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_m_node_array_set    `( BtBvhTreeClass bc , GIM_BVH_TREE_NODE_ARRAYClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#147>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btBvhTree_m_node_array_get    `( BtBvhTreeClass bc )' =>     { withBt* `bc'  } ->  `GIM_BVH_TREE_NODE_ARRAY'  mkGIM_BVH_TREE_NODE_ARRAY* #}
-- * btGImpactBvh
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#262>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_new0 as btGImpactBvh0    {  } -> `BtGImpactBvh' mkBtGImpactBvh* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#268>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_new1 as btGImpactBvh1    `( BtPrimitiveManagerBaseClass p0 )' =>     {  withBt* `p0'  } -> `BtGImpactBvh' mkBtGImpactBvh* #}
{#fun btGImpactBvh_free    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#354>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_setNodeBound as btGImpactBvh_setNodeBound    `( BtGImpactBvhClass bc , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
, withBt* `p1'  -- ^ bound
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#370>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getEscapeNodeIndex as btGImpactBvh_getEscapeNodeIndex    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#339>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_isLeafNode as btGImpactBvh_isLeafNode    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#285>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getPrimitiveManager as btGImpactBvh_getPrimitiveManager    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtPrimitiveManagerBase'  mkBtPrimitiveManagerBase* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#349>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getNodeBound as btGImpactBvh_getNodeBound    `( BtGImpactBvhClass bc , BtAABBClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
, withBt* `p1'  -- ^ bound
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#365>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getRightNode as btGImpactBvh_getRightNode    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#360>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getLeftNode as btGImpactBvh_getLeftNode    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#280>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_setPrimitiveManager as btGImpactBvh_setPrimitiveManager    `( BtGImpactBvhClass bc , BtPrimitiveManagerBaseClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ primitive_manager
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#301>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_buildSet as btGImpactBvh_buildSet    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#375>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getNodeTriangle as btGImpactBvh_getNodeTriangle    `( BtGImpactBvhClass bc , BtPrimitiveTriangleClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ nodeindex
, withBt* `p1'  -- ^ triangle
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#333>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_getNodeCount as btGImpactBvh_getNodeCount    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#321>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_hasHierarchy as btGImpactBvh_hasHierarchy    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#318>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_rayQuery as btGImpactBvh_rayQuery    `( BtGImpactBvhClass bc , BtAlignedObjectArray_int_Class p2 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ ray_dir
, withVec3* `Vec3'  peekVec3* -- ^ ray_origin
, withBt* `p2'  -- ^ collided_results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#318>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_rayQuery as btGImpactBvh_rayQuery'    `( BtGImpactBvhClass bc , BtAlignedObjectArray_int_Class p2 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ ray_dir
, allocaVec3-  `Vec3'  peekVec3* -- ^ ray_origin
, withBt* `p2'  -- ^ collided_results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#295>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_update as btGImpactBvh_update    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#258>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_refit as btGImpactBvh_refit    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#327>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_isTrimesh as btGImpactBvh_isTrimesh    `( BtGImpactBvhClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#304>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_boxQuery as btGImpactBvh_boxQuery    `( BtGImpactBvhClass bc , BtAABBClass p0 , BtAlignedObjectArray_int_Class p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ box
, withBt* `p1'  -- ^ collided_results
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#392>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
{#fun btGImpactBvh_find_collision as btGImpactBvh_find_collision    `(  BtGImpactBvhClass p0 , BtGImpactBvhClass p2 , BtPairSetClass p4 )' =>     {  withBt* `p0'  -- ^ boxset1
, withTransform* `Transform'  peekTransform* -- ^ trans1
, withBt* `p2'  -- ^ boxset2
, withTransform* `Transform'  peekTransform* -- ^ trans2
, withBt* `p4'  -- ^ collision_pairs
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.h?r=2223#392>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactBvh.cpp?r=2223>
-}
